# sudoku_solver

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  base_constraint.py  board.example.json  board.json  board.py  grid.py  main.py  pydoclint-baseline.txt  pylint-baseline.txt  pyproject.toml  requirements.txt  ruff-baseline.txt  self_exclude_constrainst.py  sub_exclude.py  test_api.py
common/: __init__.py  board.py  grid.py  piece.py
common/constrainst/: auto_constraint.py  base_constraint.py  clone_constraint.py  king_constraint.py  knight_constraint.py  palindrome_constraint.py  self_exclude_constraint.py
site/: index.html
site/css/: style.css
site/js/: app.js  button.js  cell.js  color_picker.js  compression.js  console.js  constraint_objects.js  constraints.js  cosmetic_objects.js  descriptions.js  download.js  draw.js  eliminations.js  extra_functions.js  generate.js  images.js  import_export.js  inputs.js  main.js  output_formatting.js  popups.js  section.js  set_types.js  settings.js  sidebars.js  solve.js  solver-based_actions.js  solving_techniques.js  tests.js  timer.js  titles.js  tool_categorization.js  undo_redo.js  use_tools.js
src/: api.py  main.py
src/models/: __init__.py  board.py  cell.py
src/solver/: __init__.py  backtracking.py  composite.py  solver.py
src/solver/constraints/: __init__.py  base_constraint.py  bishop.py  clone.py  clone_zone_constraint.py  even_odd.py  factory.py  greater_than.py  killer.py  king.py  knight.py  kropki.py  palindrome.py  structs.py  universal.py  whispers.py  xv.py
src/solver/strategies/: __init__.py  chain_violation_guard.py  constraint.py  elimination.py  single_hidden.py  subset_hidden.py  subset_naked.py  w_wing.py  x_wing.py
src/sudoku/: __init__.py
src/sudoku/models/: __init__.py  board.py  cell.py
src/sudoku/solver/: __init__.py  backtracking.py  composite.py  solver.py
src/sudoku/solver/constraints/: __init__.py  base_constraint.py  bishop.py  clone.py  clone_zone_constraint.py  even_odd.py  killer.py  king.py  knight.py  kropki.py  palindrome.py  universal.py  xv.py
src/sudoku/solver/strategies/: __init__.py  chain_violation_guard.py  constraint.py  elimination.py  single_hidden.py  subset_hidden.py  subset_naked.py  w_wing.py  x_wing.py
src/sudoku/utils/: __init__.py  gui.py
src/utils/: __init__.py  gui.py
sudoku/constrainst/: __init__.py
sudoku/model/: __init__.py  board.py  cell.py
sudoku/models/: __init__.py  board.py  cell.py
sudoku/solver/: __init__.py  backtracking.py  composite.py  elimination.py  only_choice.py  single_candidate.py  solver.py
sudoku/solver/constrainst/: __init__.py  base_constraint.py  clone_constraint.py  clone_zone_constraint.py  king_constraint.py  knight_constraint.py  palindrome_constraint.py
sudoku/solver/constraints/: __init__.py  base_constraint.py  bishop.py  clone.py  clone_zone_constraint.py  even_odd.py  killer.py  king.py  knight.py  kropki.py  palindrome.py  universal.py  xv.py
sudoku/solver/strategies/: __init__.py  chain_violation_guard.py  constraint.py  elimination.py  only_choice.py  pair_choice.py  single_candidate.py  single_choice.py  single_hidden.py  single_naked.py  subset_candidate.py  subset_choice.py  subset_hidden.py  subset_naked.py  x_wing.py
sudoku/util/: __init__.py  exceptions.py  io.py  printer.py
sudoku/utils/: __init__.py  exceptions.py  gui.py  io.py  printer.py
tests/: test_board.py  test_cell.py
web/js/: constraint.js
