[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = ["sudoku"]
line_length = 88
multi_line_output = 3
profile = "black"
use_parentheses = true
skip_glob = ["*/sudoku/models/__init__.py"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
no_implicit_optional = true

[tool.ruff]
fix = true
indent-width = 4
line-length = 88
preview = true
show-fixes = true
target-version = "py313"
unsafe-fixes = false

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY001", # missing-copyright-notice
    "D100",   # undocumented-public-module
    "FIX002", # line-contains-todo
    "FIX004", # line-contains-hack
    "G004",   # logging-f-string
    "TD002",  # missing-todo-author
    "TD003",  # missing-todo-link
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"
