[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = ["sudoku"]
line_length = 88
multi_line_output = 3
profile = "black"
skip_glob = ["*/sudoku/models/__init__.py"]
use_parentheses = true

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
plugins = "mypy-type-checker"
pretty = true
python_version = "3.13"
show_error_codes = true
strict = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = false

[tool.pydoclint]
allow-init-docstring = true
baseline = "pydoclint-baseline.txt"
check-style-mismatch = true
generate-baseline = true
show-filenames-in-every-violation-message = true
skip-checking-short-docstrings = false
style = 'google'

[tool.pylint.main]
enable = "all"
disable = [
    "E0401", # import-error
    "R0902", # too-many-instance-attributes
    "R0903", # too-few-public-methods
    "W0212", # protected-access -> Best management with ruff
    "W0511", # fixme
    "W0613", # unused-argument -> Best management with ruff
    "W1113", # keyword-arg-before-vararg -> Best management with ruff
]
msg-template = "{line}:{column}: {msg_id}: {msg} ({symbol})"
output-format = "text"

[tool.ruff]
exclude = ["*.ipynb"]
fix = true
indent-width = 4
line-length = 88
output-format = "grouped"
preview = true
show-fixes = true
target-version = "py313"
unsafe-fixes = false

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["sudoku"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY001", # missing-copyright-notice
    "FIX001", # line-contains-fixme
    "FIX002", # line-contains-todo
    "FIX004", # line-contains-hack
    "G004",   # logging-f-string
    "TD001",  # invalid-todo-tag
    "TD002",  # missing-todo-author
    "TD003",  # missing-todo-link
]

[tool.ruff.lint.pydocstyle]
convention = "google"
